// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Result View Tests > Render with Columns 1`] = `
<div>
  <div
    class="msg container fixedScrollbar resultView"
    style="flex-direction: column;"
  >
    <div
      class="msg treeGrid horizontalGrid verticalGrid tabulator"
      role="grid"
      style="height: 100%;"
      tabulator-layout="fitData"
    >
      <div
        class="tabulator-header"
        role="rowgroup"
      >
        <div
          class="tabulator-header-contents"
          role="rowgroup"
        >
          <div
            class="tabulator-headers"
            role="row"
            style="height: 0px;"
          />
          <br />
          <div
            class="tabulator-frozen-rows-holder"
            style="min-width: 0px;"
          />
        </div>
      </div>
      <div
        class="tabulator-tableholder"
        style="min-height: falsepx; height: calc(100% - 0px); max-height: calc(100% - 0px);"
        tabindex="0"
      >
        <div
          class="tabulator-table"
          role="rowgroup"
        />
      </div>
    </div>
    <div
      class="msg container fixedScrollbar actionHost"
      style="flex-direction: row;"
    />
  </div>
</div>
`;

exports[`Result View Tests > Render with Error/Response 1`] = `
<div>
  <div
    class="msg container fixedScrollbar resultView"
    style="flex-direction: column;"
  >
    <div
      class="msg container fixedScrollbar actionHost"
      style="flex-direction: row;"
    />
  </div>
</div>
`;

exports[`Result View Tests > Standard Rendering 1`] = `
<div>
  <div
    class="msg container fixedScrollbar resultView"
    style="flex-direction: column;"
  >
    <div
      class="msg treeGrid horizontalGrid verticalGrid"
    />
    <div
      class="msg container fixedScrollbar actionHost"
      style="flex-direction: row;"
    />
  </div>
</div>
`;
